2004-10-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkaction.c: Gtk::Action.new can omit 3rd, 4th parameters.

2004-10-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkuimanager.c: Initialize GError first. 

2004-10-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextiter.c: Gtk::TextIter#[forward|backward]_search works on
	GTK+-2.4.x. Bug #1050440.

2004-10-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeiter.c: Gtk::TreeIter#[] checks the iter is valid or not
	for GTK+-2.2.x.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Replaced "$objs <<" with add_obj.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gtk2.rb: Improved log handling.
	Define Gtk::LOG_DOMAIN, Gdk::LOG_DOMAIN.
	Rename GLib::Log.set_error_domain to GLib::Log.set_log_domain.

2004-08-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooser.c: Added Gtk::FileChooserEmbed.

2004-08-30  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgtktreeiter.c: Fix memory leaks of Gtk::TreeIter#path.

2004-08-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkicontheme.c,src/rbgtkfilechooser.c, src/rbgdkscreen.c, 
	src/rbgtkcontainer.c: 
	Improved error handing. Follow Ruby/GLib changes.
	* README: Fix dependencies(add Ruby/ATK).

2004-08-19  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgtkactiongroup.c (#add_actions, #add_toggle_actions, 
	#add_radio_actions): Fixed 3 memory leaks.

2004-08-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/testgtk.rb: Fix to show version information.

2004-08-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/gtk-demo/apple-red.png, gnome-*.png: Added.
	* src/rbgdkpango.c: Fix compiling errors on GTK+-2.0.x. 
	* src/rbgdkproperty.c: ditto.  Reported by Noritsugu Nakamura.

2004-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeview.c: Fix some methods of Gtk::TreeView to accept nil.
	
2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Fix a warning on Win32. 