@@ -1,5 +1,6 @@
 2004-10-28  Masao Mutoh  <mutoh@highway.ne.jp>
 
+	* src/rbgtkselectiondata.c: Fix a warning. 
 	* src/rbgtkaction.c: Gtk::Action.new can omit 3rd, 4th parameters.
 
 2004-10-27  Masao Mutoh  <mutoh@highway.ne.jp>
